# ticker

./: .gitignore  README.md  collect_exchange_rate.py  collect_fund_value.py  import_eur_exchange_rates.py  import_generated_histories.py  import_usd_exchange_rates.py  print_exchange_rates.py  print_latest_values.py  pyproject.toml  requirements.txt  run_collectors.py  serbia-funds.txt
data/: funds.csv  societies.csv
history-download/: README.md  download_all_histories.py  download_eclecticacapital_history.py  download_intesainvest_history.py  download_nlbfondovi_history.py  download_otpinvest_history.py  download_raiffeiseninvest_history.py  download_unicreditinvest_history.py  download_vistarica_history.py  download_wvpfondovi_history.py  fund_history_csv_to_sqlite.py  history_csv.py  import_all_histories_csv_to_sqlite.py  import_eclecticacapital_csv_to_sqlite.py  import_intesainvest_csv_to_sqlite.py  import_nlbfondovi_csv_to_sqlite.py  import_otpinvest_csv_to_sqlite.py  import_raiffeiseninvest_csv_to_sqlite.py  import_unicreditinvest_csv_to_sqlite.py  import_vistarica_csv_to_sqlite.py  import_wvpfondovi_csv_to_sqlite.py
tests/: test_api.py  test_calendar.py  test_collectors.py  test_config.py  test_eclectica_capital.py  test_import_eur_exchange_rates.py  test_import_usd_exchange_rates.py  test_intesa_invest.py  test_nbs.py  test_nlb_fondovi.py  test_orchestrator.py  test_otp_invest.py  test_print_exchange_rates.py  test_print_latest_values.py  test_raiffeisen_invest.py  test_unicredit_invest.py  test_vista_rica.py  test_wvp_fondovi.py
ticker/: __init__.py  api.py  (+16 more)
(+6 files in other folders)
